# lue

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  pyproject.toml
document/: CMakeLists.txt
document/doc/reference/operation/: CMakeLists.txt  convolve.md  d8_flow_direction.md  downstream.md  index.md  open_simplex_noise.md  uniform.md  upstream.md
document/doc/reference/operation/add/: CMakeLists.txt  add.cpp  add.md
document/doc/reference/operation/argument/: CMakeLists.txt
document/doc/reference/operation/argument/array/: CMakeLists.txt
document/doc/reference/operation/convolve/: CMakeLists.txt
document/doc/reference/operation/convolve/argument/: CMakeLists.txt
document/doc/reference/operation/convolve/example-1/: CMakeLists.txt  convolve.cpp  convolve.py
document/doc/reference/operation/d8_flow_direction/: CMakeLists.txt
document/doc/reference/operation/d8_flow_direction/example-1/: CMakeLists.txt  d8_flow_direction.cpp  d8_flow_direction.py
document/doc/reference/operation/focal/: focal_diversity.md  focal_majority.md  focal_maximum.md  focal_mean.md  focal_sum.md  index.md
document/doc/reference/operation/focal/convolve/: CMakeLists.txt
document/doc/reference/operation/miscellaneous/: CMakeLists.txt
document/doc/reference/operation/open_simplex_noise/: CMakeLists.txt
document/doc/reference/operation/open_simplex_noise/example-1/: CMakeLists.txt  open_simplex_noise.cpp
document/doc/reference/operation/routing/: index.md
document/doc/reference/operation/some_operation/: CMakeLists.txt
document/doc/reference/operation/some_operation/argument/: CMakeLists.txt
document/doc/reference/operation/some_operation/example-1/: CMakeLists.txt  some_operation.cpp  some_operation.py
document/documentation/quick_start/: CMakeLists.txt  cpp.md  game_of_life.cpp  game_of_life.py  python.md
document/documentation/reference/operation/: CMakeLists.txt  index.md
document/documentation/reference/operation/argument/: CMakeLists.txt
document/documentation/reference/operation/argument/array/: elevation-5x5-float32.txt
document/documentation/reference/operation/conversion/: CMakeLists.txt  index.md
document/documentation/reference/operation/figure/: CMakeLists.txt  focal_operation.tex  local_operation.tex  operation.tex  routing_operation.tex  zonal_operation.tex
document/documentation/reference/operation/focal/: CMakeLists.txt  convolve.md  focal_diversity.md  focal_high_pass.md  focal_majority.md  focal_maximum.md  focal_mean.md  focal_minimum.md  focal_sum.md  index.md
document/documentation/reference/operation/global/: CMakeLists.txt  index.md
document/documentation/reference/operation/io/: CMakeLists.txt  index.md
document/documentation/reference/operation/local/: CMakeLists.txt  index.md  open_simplex_noise.md  uniform.md
document/documentation/reference/operation/local/open_simplex_noise/: CMakeLists.txt
document/documentation/reference/operation/local/uniform/: CMakeLists.txt
document/documentation/reference/operation/miscellaneous/: index.md  resample.md
document/documentation/reference/operation/routing/: CMakeLists.txt  d8_flow_direction.md  downstream.md  index.md  upstream.md
document/documentation/reference/operation/routing/d8_flow_direction/: CMakeLists.txt
document/documentation/reference/operation/some_operation/: CMakeLists.txt
document/documentation/reference/operation/zonal/: CMakeLists.txt  index.md
source/data_model/cf/: CMakeLists.txt
source/data_model/cf/doc/: namespace.dox
source/data_model/cf/include/lue/: cf.hpp
source/data_model/cf/source/: dataset.cpp  dimension.cpp  domain.cpp  field.cpp  group.cpp  variable.cpp
source/data_model/cf/source/netcdf/: data_variable.cpp
source/data_model/cf/src/: dataset.cpp
source/data_model/cf/test/: CMakeLists.txt  dataset_test.cpp
source/data_model/describe/: CMakeLists.txt
source/data_model/describe/source/: describe.cpp  describe.hpp  describe_cf.cpp  describe_cf.hpp  describe_netcdf4.cpp  describe_netcdf4.hpp  main.cpp
source/data_model/netcdf/: CMakeLists.txt
source/data_model/netcdf/doc/: namespace.dox
source/data_model/netcdf/include/lue/: netcdf.hpp
source/data_model/netcdf/src/: attribute.cpp  dataset.cpp  dimension.cpp  error.cpp  group.cpp  variable.cpp  version.cpp.in
source/data_model/netcdf/test/: CMakeLists.txt  attribute_test.cpp  dataset_test.cpp  dimension_test.cpp  group_test.cpp  variable_test.cpp
source/data_model/netcdf4/: CMakeLists.txt
source/data_model/netcdf4/doc/: namespace.dox
source/data_model/netcdf4/include/lue/: netcdf4.hpp
source/data_model/netcdf4/source/: attribute.cpp  dataset.cpp  dimension.cpp  error.cpp  group.cpp  hyperslab.cpp  type.cpp  variable.cpp  version.cpp.in
source/data_model/netcdf4/src/: attribute.cpp  dataset.cpp  dimension.cpp  error.cpp  group.cpp  variable.cpp
source/data_model/netcdf4/test/: CMakeLists.txt  attribute_test.cpp  dataset_test.cpp  dimension_test.cpp  group_test.cpp  variable_test.cpp
source/data_model/netcdf4/test/use_case/: weather_forecast_test.cpp
source/document/cxx/: CMakeLists.txt
source/document/cxx/include/lue/: document.hpp
source/document/cxx/source/: example.cpp
source/document/cxx/test/: CMakeLists.txt  example_test.cpp
source/document/python/: CMakeLists.txt
source/document/python/script/: CMakeLists.txt  lue_create_example_figure.py  lue_import_example_data.py
source/framework/api/c/: CMakeLists.txt
source/framework/api/c/source/: array.cpp  array.hpp  as_field.cpp  c_runtime.hpp  field.cpp  field.hpp  future.cpp  future.hpp  io.cpp  literal.cpp  literal.hpp  local_operation.cpp  miscellaneous_operation.cpp  runtime.cpp  scalar.cpp  scalar.hpp  type_info.cpp
source/framework/api/c/src/: c_runtime.cpp
source/framework/api/c/test/: CMakeLists.txt  hpx_unit_test.h  io_test.cpp  local_operation_test.c  local_operation_test.cpp  miscellaneous_operation_test.c  test_suite.hpp  unit_test.cpp  unit_test.h
source/framework/model/test/: CMakeLists.txt  memory_test.cpp  simulate_test.cpp
(+375 files in other folders)
